# common

./: CMakeCache.txt  CMakeDef.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  setup.sh
QtAnalyses/: Makefile  cmake_install.cmake
daqDpga/: Makefile  cmake_install.cmake
include/: GenericTypeDefs.h  color.h  frame.h  ipcdaq.h  shdmem.h
libframe/: Doxyfile  Makefile  cmake_install.cmake
libqcustomplot/: Makefile  cmake_install.cmake
libshm/: Makefile  cmake_install.cmake
scripts/: version.sh
visu/: Makefile  cmake_install.cmake
